syntax = "proto3";

package storage;
import "User_FindByRollAndName.proto";
import "User_CreateUser.proto";

option go_package = "pb";

// Server definition
service StorageService {
    // Sends a greeting
    rpc User_FindByRollAndName (User_FindByRollAndNameRequest) returns (User_FindByRollAndNameResponse) {}
    rpc User_CreateUser (User_CreateUserRequest) returns (User_CreateUserResponse) {}
}